[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "django>=4.2.6",
    "pymysql>=1.1.0",
    "django-cors-headers>=4.2.0",
    "pyjwt>=2.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

