[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "django>=4.2.6",
    "pymysql>=1.1.0",
    "django-cors-headers>=4.2.0",
    "pyjwt>=2.8.0",
    "django-redis>=5.4.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "doppler run -- python dashop/manage.py runserver"
mm = "python dashop/manage.py makemigrations"
mt = "python dashop/manage.py migrate"

